[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Enemies/tentaplant_idle.png" type="Texture" id=2]
[ext_resource path="res://scenes/Enemies/tentaplant_fire.png" type="Texture" id=3]
[ext_resource path="res://scenes/Enemies/Tentaplant.gd" type="Script" id=4]
[ext_resource path="res://scenes/Enemies/enemy_hurt.shader" type="Shader" id=5]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 5 )
shader_param/color = Color( 0.745098, 0.14902, 0.2, 1 )
shader_param/active = false

[sub_resource type="Animation" id=2]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fire_bullet"
} ]
}

[sub_resource type="Animation" id=3]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}

[node name="Tentaplant" type="KinematicBody2D" groups=[
"EnemyGroup",
]]
collision_layer = 8
collision_mask = 12
script = ExtResource( 4 )

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DetectionArea"]
polygon = PoolVector2Array( 8, 0, 96, 128, -96, 128, -8, 0 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, 16 )
texture = ExtResource( 3 )
offset = Vector2( 0, -9.53674e-07 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/fire = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 8, 0, 16, 8, 16, 16, 8, 24, -8, 24, -16, 16, -16, 8, -8, 0 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, 24 )

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="EndAlertTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="ShaderTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_BulletTimer_timeout"]
[connection signal="timeout" from="EndAlertTimer" to="." method="_on_EndAlertTimer_timeout"]
[connection signal="timeout" from="ShaderTimer" to="." method="_on_ShaderTimer_timeout"]
